--- a/TaskManagement.Data/TaskManagement.Data.csproj
+++ b/TaskManagement.Data/TaskManagement.Data.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskManagement.Core\TaskManagement.Core.csproj" />
+  </ItemGroup>
+
 </Project>
