--- a/TaskManagement.Api/appsettings.json
+++ b/TaskManagement.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "MyApp",
+    "Audience": "MyAppClients",
+    "Key": "STORED IN USER-SECRET",
+    "ExpiresMinutes": 60
+  }
 }
