--- a/TaskManagement.Api/appsettings.json
+++ b/TaskManagement.Api/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/appsettings",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,9 +8,9 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Issuer": "MyApp",
-    "Audience": "MyAppClients",
-    "Key": "STORED IN USER-SECRET",
+    "Issuer": "ZiadYahya",
+    "Audience": "TaskManagementApp",
+    "Key": "STORED IN A USER-SECRET",
     "ExpiresMinutes": 60
   }
 }
