--- a/.editorconfig
+++ b/.editorconfig
@@ -15,6 +15,8 @@ csharp_new_line_before_open_brace = all
 csharp_indent_switch_labels = true
 csharp_indent_case_contents = true
 csharp_indent_case_contents_when_block = true
+csharp_style_prefer_primary_constructors = false
+max_line_length = 120
 
 [*.{slnx,csproj,json}]
 indent_size = 2
