--- a/TaskManagement.Api/TaskManagement.Api.csproj
+++ b/TaskManagement.Api/TaskManagement.Api.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\TaskManagement.Data\TaskManagement.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
