Refactor TaskController and TaskRepository to use new request models; add mapping configurations and update database migration files

--- a/TaskManagement.Core/TaskManagement.Core.csproj
+++ b/TaskManagement.Core/TaskManagement.Core.csproj
@@ -7,9 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Contracts\Response\" />
   </ItemGroup>
 
 </Project>
