--- a/src/TaskManagement.Api/appsettings.json
+++ b/src/TaskManagement.Api/appsettings.json
@@ -7,10 +7,13 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=data.db"
+  },
   "Jwt": {
-    "Issuer": "ZiadYahya",
-    "Audience": "TaskManagementApp",
     "Key": "STORED IN A USER-SECRET",
-    "ExpiresMinutes": 15
+    "Issuer": "Task Management App",
+    "Audience": "Task Management App users",
+    "ExpiresMinutes": 30
   }
 }
