--- a/src/TaskManagement.Application/TaskManagement.Application.csproj
+++ b/src/TaskManagement.Application/TaskManagement.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\TaskManagement.Domain\TaskManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
+  </ItemGroup>
+
 </Project>
