Implement the refresh token functionality

--- a/TaskManagement.Api/appsettings.json
+++ b/TaskManagement.Api/appsettings.json
@@ -8,12 +8,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=data.db"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TaskManagement;User=sa;Password=localdevelopment;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Key": "STORED IN A USER-SECRET",
     "Issuer": "Task Management App",
     "Audience": "Task Management App users",
-    "ExpiresMinutes": 30
+    "ExpiryMinutes": 30,
+    "RefreshTokenExpiryDays": 14
   }
 }
